<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item android:id="@+id/settings_naviMainID"
          android:title="@string/setting_navi"
        android:icon="@drawable/ic_settings_black_24dp"
        />
<item android:id="@+id/aboutID"
      android:title="@string/about_navi"
    android:icon="@drawable/ic_info_black_24dp"/>

    <item android:id="@+id/moreappsID"
        android:title="@string/more_apps"
        android:icon="@drawable/ic_apps_black_24dp"/>

    </group>


    <item android:title="@string/new_note">

        <menu>
            <item android:id="@+id/mainCameraID"
                android:title="@string/Camera"
                android:icon="@drawable/ic_photo_camera_black_24dp"/>

            <item android:id="GalleryMainID"
                android:title="@string/Gallery"
                android:icon="@drawable/ic_image_black_24dp"







        </menu>



    </item>











</menu>