<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"

              android:orientation="vertical"
              android:background="@color/white"
             tools:context="com.example.khaled.Note.CrimeFragment"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/ToolbarnorecontentID"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="@color/colorAccent"

            >



        </android.support.v7.widget.Toolbar>



    </android.support.design.widget.AppBarLayout>




    <!-- TODO: Update blank fragment layout -->

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:id="@+id/CardViewEdittextTitle"

        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="10dp"
        android:layout_weight="1"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/EditTextFragmentID"
        android:background="@color/white"
        android:padding="1dp"
        android:textStyle="bold"
        android:hint="@string/Enter_Title"/>

</android.support.v7.widget.CardView>


   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"/>-->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/CardViewContentID"
        android:elevation="5dp"
        android:layout_weight="35"

        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="8dp"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="take pic"
                android:id="@+id/takepicbtnID"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/IMGviewID"
                android:scaleType="centerInside"
                android:cropToPadding="true"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp">
    <EditText
        android:id="@+id/NoteContentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="1dp"
        android:hint="@string/NoteHint"
        />




    </ScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/crime_dateBtnID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/white"

                    />
                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"

                    android:text="@string/choose_contact"
                    android:id="@+id/choosecontactbtnID"
                    />


                <CheckBox
                    android:id="@+id/crime_solvedCheckID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/crime_solved_label"/>

            </LinearLayout>



        </LinearLayout>


    </android.support.v7.widget.CardView>
</ScrollView>







       <!-- android:layout_below="@id/CardViewContentID"/> -->


       <!-- android:layout_below="@id/crime_dateBtnID"/> -->


</LinearLayout>
